@@ -1,2 +1,3 @@
 DIST money-5.0.0.gem 45056 SHA256 7095273d91bc0628d061c0c416730b994c335487af40718321cc634fecf45ada SHA512 bb1fca88958e43c201008a2c12738b04d7a874ea3663ed27dd9fcbb6fef2c8abae819b87b2b00c01884f8e964a19955b90f82e306e27fe7dd47cdde3b0dfe2db WHIRLPOOL bf3e3a9809a7d08d879dfaefe8746921853927cdadcd10b9aee373116c09b6f89c336966d1e7cd79d85a92b51c99b47d95c48a1849523b5e6bfbdab77fe5b764
 DIST money-5.1.0.gem 49664 SHA256 b8d3e99b2138d234ccf9b860275755e41612934b2cd628c4ecdd2c7435a7dce9 SHA512 430b68cb4f221bb8010897c2e52f5f0d60508b6507fcf2ded0dc82b2a53589eb1d23eb3d28dd6a77fd483925c3ff0f07a2fc419cb9a46df52ad8fd0cbf5f36cf WHIRLPOOL f89084d4589956d591e2a8e411750295e5f1edff30077977cd5bbcf2e1d955307ad89469d6655d92675737da8b190b37ca8433b58682b53bcd5b804ed8b11ed2
+DIST money-6.0.0.gem 57344 SHA256 15f377fe088260e3e2240365c0a0b401b094e95756f03f71a10f623cfd4d17a5 SHA512 5554d648bbd78e8c3b7a0f9bd84281428ff3e25047f47a7b2ad0db77f3ce4111e19fbc480f543bfedd6c0fe1764b0b11273f248ad24fbf148e922a177d681fca WHIRLPOOL ffbdb4d5c8c492c3bec6074cd33f1e1166b34e3aa227e7ea12510fae803c7708437c4c3b4efaa78c0e66226555a7bce9e0c85871cd29ba91df317a821fa66098
