@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/money
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 
+*money-6.0.0 (29 Nov 2013)
+
+  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> +money-6.0.0.ebuild:
+  Version bump.
+
   21 Jun 2013; Hans de Graaff <graaff@gentoo.org> -money-2.1.5-r1.ebuild,
   -money-3.7.1.ebuild, -money-4.0.1.ebuild:
   Cleanup.
